--- a/shadPS4/shadPS4.vcxproj
+++ b/shadPS4/shadPS4.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="core\FsFile.cpp" />
     <ClCompile Include="gui\GameListViewer.cpp" />
     <ClCompile Include="gui\shadps4gui.cpp" />
     <ClCompile Include="main.cpp" />
@@ -23,6 +24,10 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="gui\GameListViewer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="core\FsFile.h" />
+    <ClInclude Include="Types.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{F005E4D9-1FBE-40B3-9FBD-35CEC59081CD}</ProjectGuid>
