--- a/shadPS4/shadPS4.vcxproj
+++ b/shadPS4/shadPS4.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core\FsFile.cpp" />
+    <ClCompile Include="emulator\fileFormat\PSF.cpp" />
     <ClCompile Include="gui\GameListViewer.cpp" />
     <ClCompile Include="gui\shadps4gui.cpp" />
     <ClCompile Include="main.cpp" />
@@ -27,6 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core\FsFile.h" />
+    <ClInclude Include="emulator\fileFormat\PSF.h" />
     <ClInclude Include="Types.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
