--- a/shadPS4/shadPS4.vcxproj.filters
+++ b/shadPS4/shadPS4.vcxproj.filters
@@ -27,6 +27,12 @@
     <Filter Include="Core">
       <UniqueIdentifier>{73d07238-8864-48b5-9987-e455fa73c82f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="emulator">
+      <UniqueIdentifier>{66864aec-390b-47a8-bddb-b52032630d7a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="emulator\fileFormat">
+      <UniqueIdentifier>{ed31734c-f010-4590-9f01-18e0b2497ffb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -40,6 +46,9 @@
     </ClCompile>
     <ClCompile Include="core\FsFile.cpp">
       <Filter>Core</Filter>
+    </ClCompile>
+    <ClCompile Include="emulator\fileFormat\PSF.cpp">
+      <Filter>emulator\fileFormat</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -61,6 +70,9 @@
     </ClInclude>
     <ClInclude Include="core\FsFile.h">
       <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="emulator\fileFormat\PSF.h">
+      <Filter>emulator\fileFormat</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
