--- a/shadPS4/shadPS4.vcxproj
+++ b/shadPS4/shadPS4.vcxproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ClCompile Include="core\FsFile.cpp" />
     <ClCompile Include="emulator\fileFormat\PSF.cpp" />
+    <ClCompile Include="emulator\Loader.cpp" />
     <ClCompile Include="gui\GameListViewer.cpp" />
     <ClCompile Include="gui\shadps4gui.cpp" />
     <ClCompile Include="main.cpp" />
@@ -29,6 +30,7 @@
   <ItemGroup>
     <ClInclude Include="core\FsFile.h" />
     <ClInclude Include="emulator\fileFormat\PSF.h" />
+    <ClInclude Include="emulator\Loader.h" />
     <ClInclude Include="Types.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
