--- a/shadPS4/shadPS4.vcxproj.filters
+++ b/shadPS4/shadPS4.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="emulator\fileFormat\PSF.cpp">
       <Filter>emulator\fileFormat</Filter>
     </ClCompile>
+    <ClCompile Include="emulator\Loader.cpp">
+      <Filter>emulator</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="gui\shadps4gui.ui">
@@ -73,6 +76,9 @@
     </ClInclude>
     <ClInclude Include="emulator\fileFormat\PSF.h">
       <Filter>emulator\fileFormat</Filter>
+    </ClInclude>
+    <ClInclude Include="emulator\Loader.h">
+      <Filter>emulator</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
