--- a/shadPS4/shadPS4.vcxproj
+++ b/shadPS4/shadPS4.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core\FsFile.cpp" />
+    <ClCompile Include="emulator\fileFormat\PKG.cpp" />
     <ClCompile Include="emulator\fileFormat\PSF.cpp" />
     <ClCompile Include="emulator\Loader.cpp" />
     <ClCompile Include="gui\GameListViewer.cpp" />
@@ -29,6 +30,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core\FsFile.h" />
+    <ClInclude Include="emulator\fileFormat\PKG.h" />
     <ClInclude Include="emulator\fileFormat\PSF.h" />
     <ClInclude Include="emulator\Loader.h" />
     <ClInclude Include="Types.h" />
