--- a/tools/pkg extractor/pkgextract.vcxproj
+++ b/tools/pkg extractor/pkgextract.vcxproj
@@ -127,7 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FsFile.cpp" />
+    <ClCompile Include="PKG.cpp" />
     <ClCompile Include="pkgextract.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FsFile.h" />
+    <ClInclude Include="PKG.h" />
+    <ClInclude Include="Types.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
