--- a/shadPS4/shadPS4.vcxproj
+++ b/shadPS4/shadPS4.vcxproj
@@ -17,6 +17,7 @@
     <ClCompile Include="emulator\Loader.cpp" />
     <ClCompile Include="gui\custom_table_widget_item.cpp" />
     <ClCompile Include="gui\GameListViewer.cpp" />
+    <ClCompile Include="gui\game_list_frame.cpp" />
     <ClCompile Include="gui\game_list_grid.cpp" />
     <ClCompile Include="gui\game_list_grid_delegate.cpp" />
     <ClCompile Include="gui\game_list_table.cpp" />
@@ -41,6 +42,7 @@
     <ClInclude Include="emulator\Loader.h" />
     <ClInclude Include="gui\custom_table_widget_item.h" />
     <QtMoc Include="gui\game_list_grid.h" />
+    <ClInclude Include="gui\game_list_frame.h" />
     <ClInclude Include="gui\game_list_grid_delegate.h" />
     <ClInclude Include="gui\game_list_table.h" />
     <ClInclude Include="gui\gui_settings.h" />
