better handling of icons in list mode

--- a/shadPS4/shadPS4.vcxproj
+++ b/shadPS4/shadPS4.vcxproj
@@ -45,10 +45,12 @@
     <QtMoc Include="gui\game_list_grid.h" />
     <QtMoc Include="gui\game_list_frame.h" />
     <ClInclude Include="gui\game_list_grid_delegate.h" />
+    <ClInclude Include="gui\game_list_item.h" />
     <ClInclude Include="gui\game_list_table.h" />
     <ClInclude Include="gui\gui_save.h" />
     <QtMoc Include="gui\gui_settings.h" />
     <QtMoc Include="gui\settings.h" />
+    <ClInclude Include="gui\qt_utils.h" />
     <ClInclude Include="Types.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -73,12 +75,12 @@
   </ImportGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="QtSettings">
     <QtInstall>6.4.2</QtInstall>
-    <QtModules>core;gui;widgets</QtModules>
+    <QtModules>core;gui;widgets;concurrent</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="QtSettings">
     <QtInstall>6.4.2</QtInstall>
-    <QtModules>core;gui;widgets</QtModules>
+    <QtModules>core;gui;widgets;concurrent</QtModules>
     <QtBuildConfig>release</QtBuildConfig>
   </PropertyGroup>
   <Target Name="QtMsBuildNotFound" BeforeTargets="CustomBuild;ClCompile" Condition="!Exists('$(QtMsBuild)\qt.targets') or !Exists('$(QtMsBuild)\qt.props')">
