game_list and game grid are now working

--- a/shadPS4/shadPS4.vcxproj.filters
+++ b/shadPS4/shadPS4.vcxproj.filters
@@ -92,7 +92,7 @@
       <Filter>Form Files</Filter>
     </QtUic>
     <QtUic Include="gui\main_window.ui">
-      <Filter>Form Files</Filter>
+      <Filter>gui\main window</Filter>
     </QtUic>
   </ItemGroup>
   <ItemGroup>
