started work on elf class

--- a/emulator/emulator.vcxproj
+++ b/emulator/emulator.vcxproj
@@ -133,9 +133,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Core\FsFile.cpp" />
+    <ClCompile Include="Loader\Elf.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Core\FsFile.h" />
+    <ClInclude Include="Loader\Elf.h" />
     <ClInclude Include="types.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
