--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -40,3 +40,11 @@ jobs:
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.2
+       with:
+        # Artifact name
+        name: shadps4-win64
+        # A file, directory or wildcard pattern that describes what to upload
+        path: x64/Release
